feature Signup Menu UI